feat: platform resource cruds openapi doc
