# doc/openapi/devkit.yaml
@@ -4,24 +4,452 @@ info:
     version: v2.2.0
     title: TAO LTI 1.3 DevKit - HTTP API
 
+servers:
+    - url: http://devkit-lti1p3.localhost
+      description: Local TAO LTI 1.3 DevKit (docker)
+
 paths:
-    /api/platform/nrps/memberships:
+    /api/platform/proctoring/assessments:
         get:
-            summary: NRPS memberships list
-            description: NRPS memberships list endpoint
+            summary: List ACS assessments
+            tags:
+                - ACS assessments
+            security:
+                -   apiKey: [ ]
+            parameters:
+                -   in: query
+                    name: limit
+                    schema:
+                        type: integer
+                    description: Pagination limit
+                -   in: query
+                    name: offset
+                    schema:
+                        type: integer
+                    description: Pagination offset
             responses:
                 200:
                     description: Success
                     content:
-                        text/plain:
+                        application/json:
                             schema:
-                                type: string
-                                example: pong
+                                $ref: '#/components/schemas/AssessmentCollection'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+        post:
+            summary: Create ACS assessment
+            tags:
+                - ACS assessments
+            security:
+                -   apiKey: [ ]
+            requestBody:
+                description: ACS assessment to create
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/AcsAssessment'
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Assessment'
+                400:
+                    $ref: '#/components/responses/BadRequestResponse'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                409:
+                    $ref: '#/components/responses/ConflictResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+    /api/platform/proctoring/assessments/{assessmentId}:
+        get:
+            summary: Get ACS assessment
+            tags:
+                - ACS assessments
+            security:
+                -   apiKey: [ ]
+            parameters:
+                -   in: path
+                    name: assessmentId
+                    schema:
+                        type: string
+                    description: ACS assessment identifier
+                    required: true
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Assessment'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                404:
+                    $ref: '#/components/responses/NotFoundResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+        delete:
+            summary: Delete ACS assessment
+            tags:
+                - ACS assessments
+            security:
+                -   apiKey: [ ]
+            parameters:
+                -   in: path
+                    name: assessmentId
+                    schema:
+                        type: string
+                    description: ACS assessment identifier
+                    required: true
+            responses:
+                204:
+                    description: Success
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                404:
+                    $ref: '#/components/responses/NotFoundResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+        patch:
+            summary: Update ACS assessment
+            tags:
+                - ACS assessments
+            security:
+                -   apiKey: [ ]
+            parameters:
+                -   in: path
+                    name: assessmentId
+                    schema:
+                        type: string
+                    description: ACS assessment identifier
+                    required: true
+            requestBody:
+                description: ACS assessment data to update (only status allowed)
+                required: false
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                status:
+                                    type: string
+                                    enum:
+                                        - none
+                                        - running
+                                        - paused
+                                        - terminated
+                                        - complete
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Assessment'
+                400:
+                    $ref: '#/components/responses/BadRequestResponse'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                404:
+                    $ref: '#/components/responses/NotFoundResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+    /api/platform/nrps/memberships:
+        get:
+            summary: List NRPS memberships
+            tags:
+                - NRPS memberships
+            security:
+                -   apiKey: [ ]
+            parameters:
+            -       in: query
+                    name: limit
+                    schema:
+                        type: integer
+                    description: Pagination limit
+            -       in: query
+                    name: offset
+                    schema:
+                        type: integer
+                    description: Pagination offset
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/MembershipCollection'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+        post:
+            summary: Create NRPS membership
+            tags:
+                - NRPS memberships
+            security:
+                -   apiKey: [ ]
+            requestBody:
+                description: NRPS membership to create
+                required: true
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/NrpsMembership'
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Membership'
+                400:
+                    $ref: '#/components/responses/BadRequestResponse'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                409:
+                    $ref: '#/components/responses/ConflictResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+    /api/platform/nrps/memberships/{membershipId}:
+        get:
+            summary: Get NRPS membership
+            tags:
+                - NRPS memberships
+            security:
+                -   apiKey: [ ]
+            parameters:
+                -   in: path
+                    name: membershipId
+                    schema:
+                        type: string
+                    description: NRPS membership identifier
+                    required: true
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Membership'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                404:
+                    $ref: '#/components/responses/NotFoundResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+        delete:
+            summary: Delete NRPS membership
+            tags:
+                - NRPS memberships
+            security:
+                -   apiKey: [ ]
+            parameters:
+                -   in: path
+                    name: membershipId
+                    schema:
+                        type: string
+                    description: NRPS membership identifier
+                    required: true
+            responses:
+                204:
+                    description: Success
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                403:
+                    $ref: '#/components/responses/ForbiddenResponse'
+                404:
+                    $ref: '#/components/responses/NotFoundResponse'
+                500:
+                    $ref: '#/components/responses/InternalServerErrorResponse'
+        patch:
+            summary: Update NRPS membership
+            tags:
+                - NRPS memberships
+            security:
+                -   apiKey: [ ]
+            parameters:
+                -   in: path
+                    name: membershipId
+                    schema:
+                        type: string
+                    description: NRPS membership identifier
+                    required: true
+            requestBody:
+                description: NRPS membership data to update (partial representation allowed)
+                required: false
+                content:
+                    application/json:
+                        schema:
+                            type: object
+                            properties:
+                                context:
+                                    $ref: '#/components/schemas/NrpsContext'
+                                members:
+                                    $ref: '#/components/schemas/NrpsMemberCollection'
+            responses:
+                200:
+                    description: Success
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Membership'
+                400:
+                    $ref: '#/components/responses/BadRequestResponse'
+                401:
+                    $ref: '#/components/responses/UnauthorizedResponse'
+                403:
+                    $ref: '#/components/responses/ForbiddenResponse'
+                404:
+                    $ref: '#/components/responses/NotFoundResponse'
                 500:
                     $ref: '#/components/responses/InternalServerErrorResponse'
 
 components:
+    securitySchemes:
+        apiKey:
+            type: http
+            scheme: bearer
+            bearerFormat: TAO LTI 1.3 DevKit API key
     schemas:
+        AssessmentCollection:
+            type: object
+            properties:
+                assessments:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Assessment'
+        Assessment:
+            type: object
+            properties:
+                assessment:
+                    $ref: '#/components/schemas/AcsAssessment'
+                acs_url:
+                    description: Assessment ACS url
+                    example: 'http://devkit-lti1p3.localhost/platform/service/acs/custom-assessment'
+                    type: string
+        AcsAssessment:
+            type: object
+            properties:
+                id:
+                    description: Assessment identifier
+                    example: 'custom-assessment'
+                    type: string
+                status:
+                    description: Assessment status
+                    type: string
+                    enum:
+                        - none
+                        - running
+                        - paused
+                        - terminated
+                        - complete
+            required:
+                - id
+                - status
+        MembershipCollection:
+            type: object
+            properties:
+                memberships:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/Membership'
+        Membership:
+            type: object
+            properties:
+                membership:
+                    $ref: '#/components/schemas/NrpsMembership'
+                nrps_url:
+                    description: Membership NRPS url
+                    example: 'http://devkit-lti1p3.localhost/platform/service/nrps/custom-context/memberships/custom-membership'
+                    type: string
+        NrpsMembership:
+            type: object
+            properties:
+                id:
+                    description: Membership identifier
+                    example: 'custom-membership'
+                    type: string
+                context:
+                    $ref: '#/components/schemas/NrpsContext'
+                members:
+                    $ref: '#/components/schemas/NrpsMemberCollection'
+            required:
+                - id
+                - context
+        NrpsContext:
+            type: object
+            properties:
+                id:
+                    description: Context identifier
+                    example: 'custom-context'
+                    type: string
+                label:
+                    description: Context label
+                    example: 'Context label'
+                    type: string
+                title:
+                    description: Context title
+                    example: 'Context title'
+                    type: string
+            required:
+                - id
+        NrpsMemberCollection:
+            type: array
+            items:
+                $ref: '#/components/schemas/NrpsMember'
+        NrpsMember:
+            type: object
+            properties:
+                user_id:
+                    description: Member identifier
+                    example: 'user-id'
+                    type: string
+                roles:
+                    type: array
+                    items:
+                        type: string
+                        example: 'http://purl.imsglobal.org/vocab/lis/v2/membership#Instructor'
+                status:
+                    description: Member status
+                    example: 'Active'
+                    type: string
+                name:
+                    description: Member name
+                    example: 'John Alex Doe'
+                    type: string
+                picture:
+                    description: Member picture
+                    example: 'https://platform.example.edu/john-doe.jpg'
+                    type: string
+                given_name:
+                    description: Member given name
+                    example: 'John'
+                    type: string
+                family_name:
+                    description: Member family name
+                    example: 'Doe'
+                    type: string
+                middle_name:
+                    description: Member middle name
+                    example: 'Alex'
+                    type: string
+                email:
+                    description: Member email
+                    example: 'john-doe@platform.example.edu'
+                    type: string
+                lis_person_sourcedid:
+                    description: LIS sourced id
+                    example: 'lis-sourced-id'
+                    type: string
+            required:
+                - user_id
+                - roles
         Error:
             type: object
             properties:
@@ -38,6 +466,12 @@ components:
                         $ref: '#/components/schemas/Error'
         UnauthorizedResponse:
             description: Unauthorized
+            content:
+                application/json:
+                    schema:
+                        $ref: '#/components/schemas/Error'
+        ForbiddenResponse:
+            description: Forbidden
             content:
                 application/json:
                     schema:
